<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40dp"
        android:hint="@string/Text_Name" />

    <TextView
        android:id="@+id/text_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_name"
        android:layout_below="@+id/text_name"
        android:layout_marginTop="18dp"
        android:hint="@string/Text_Age" />

    <TextView
        android:id="@+id/text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_telephone"
        android:layout_below="@+id/text_telephone"
        android:layout_marginTop="19dp"
        android:hint="@string/Text_Weight" />

    <TextView
        android:id="@+id/text_pregnancy_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_weight"
        android:layout_below="@+id/text_weight"
        android:layout_marginTop="19dp"
        android:hint="@string/Text_Pregnancy_Date" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_pregnancy_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/Emergency_Phone" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/Emergency_Phone" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/Emergency_Phone" />

    <TextView
        android:id="@+id/text_telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_age"
        android:layout_below="@+id/text_age"
        android:layout_marginTop="22dp"
        android:hint="@string/Text_Telephone" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:text="@string/Enter_Emergency_Contact"
        android:textColor="@color/home_button"
        android:textSize="@dimen/enter_emergency_text"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/Web_Site"
        android:textStyle="bold|italic" />

</RelativeLayout>
